--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,4 @@
-venv
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-.Python
-.env
-.git
-.gitignore
-node_modules
-still_alive.db
-.env.local
+venv/
+__pycache__/
+.git/
+*.db
