--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,14 @@
-version: '3.8'
-
 services:
-  still_alive:
+  still-alive-app:
     build: .
-    container_name: still_alive_app
-    ports:
-      - "${STREAMLIT_PORT:-8501}:8501"
+    container_name: still_alive_container
+    restart: always
     volumes:
       - .:/app
-    env_file:
-      - .env
-    environment:
-      - PYTHONUNBUFFERED=1
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8501/ || exit 1"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 45s
-    restart: unless-stopped
+    ports:
+      - "8501:8501"
+
+networks:
+  default:
+    name: nginx_network
+    external: true
